src/css/app.styl
// app global css
@import '~quasar-variables';

// =============================================================================
//                                BACKGROUND
// =============================================================================
  // Background made with https://trianglify.io/, width="1920" height="2880"
.header {
  background-image: url('../assets/background.svg');
}

.background-image {
  background-image: url('../assets/background.svg');
}

// =============================================================================
//                       SITE DIMENSIONS AND SPACING
// =============================================================================

.all-content-format {
  width: 100%
  max-width: 1023px
  margin: 0 auto
  }

.no-left-padding {
  padding-left: 0;
}

.negative-top-margin {
  margin-top: -1rem;
}

.row li {
  margin-top: -0.75rem;
}

.project-picture {
  display: block;
  width: 100%;
  height: auto;
}

// =============================================================================
//                                  FONTS
// =============================================================================

// Header style modeled after the overline option in Quasar's QItemLabel
h1, h2, h3, .header--overline {
  color: rgba(0,0,0,0.7);
  font-weight: 500;
  letter-spacing: 0.16667em;
  line-height: 2rem;
  text-transform: uppercase
}

h4, h5 {
  color: rgba(0,0,0,0.7);
  letter-spacing: 0.083333em;
  line-height: 2rem;
  text-transform: uppercase
}

p, a, li, .p-font {
  line-height: 1.5rem;
  color: rgba(0,0,0,0.7);
  font-size: 1rem
}

.subheader--overline {
  font-weight: 400;
  line-height: 2rem;
  color: rgba(0,0,0,0.7);
  font-variant: all-small-caps
}

.no-text-decoration {
  text-decoration: none;
}

// Centered elements
.center-text {
  text-align: center;
}

// Small help text / supplemental info
.helper-text {
  font-size: small;
}

// Collapsible "More info" type of elements
.more-info {
  font-size: 0.1 rem;
}

// Menu drawer CSS
.drawer {
  color: $darktext;
  background-image: url('../assets/background.svg');
}

hr {
  border: 1px solid $accent;
  width: 100%;
  margin-top: 2%;
  margin-bottom: 3%;
}

